--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,16 @@ spring.security.user.password=password
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.springframework.web=INFO
+
+logging.level.org.thymeleaf=TRACE
+logging.level.org.attoparser=TRACE
+
 
