--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ info.app.version=1.0.0
 spring.datasource.url=jdbc:mysql://localhost:3306/project
 spring.datasource.username=wafrh
 spring.datasource.password=password
-spring.security.user.name=amr
-spring.security.user.password=password
+#spring.security.user.name=amr
+#spring.security.user.password=password
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
@@ -19,7 +19,8 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.springframework.web=INFO
 
-logging.level.org.thymeleaf=TRACE
-logging.level.org.attoparser=TRACE
+#logging.level.org.thymeleaf=TRACE
+#logging.level.org.attoparser=TRACE
+logging.level.org.springframework.jdbc.core=TRACE
 
 
